Updates to custom layouts for awards and resources

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -156,6 +156,223 @@ button:hover, .button:hover {
     padding: 2em 25% 2em 5%;
   }
 }
+/* Interior Page/Post Styles */
+/* line 83, ../sass/_global.scss */
+.sub-nav {
+  background: #396eb6;
+  color: #fff;
+  width: 15%;
+  position: absolute;
+  right: 10%;
+}
+/* line 90, ../sass/_global.scss */
+.sub-nav .button {
+  width: 100%;
+  box-sizing: border-box;
+  margin-bottom: 1em;
+  text-align: center;
+}
+/* line 97, ../sass/_global.scss */
+.sub-nav .links {
+  padding: 1em;
+}
+/* line 101, ../sass/_global.scss */
+.sub-nav .current_page_item {
+  font-weight: 800;
+}
+/* line 105, ../sass/_global.scss */
+.sub-nav .children {
+  margin-left: 1em;
+  font-size: .8em;
+}
+/* line 109, ../sass/_global.scss */
+.sub-nav .children li {
+  margin: .5em 0;
+}
+/* line 114, ../sass/_global.scss */
+.sub-nav li {
+  list-style: none;
+  padding: 0;
+  margin: 0 0 .5em;
+}
+/* line 119, ../sass/_global.scss */
+.sub-nav li a {
+  color: #fff;
+  text-decoration: none;
+}
+/* line 123, ../sass/_global.scss */
+.sub-nav li a:hover {
+  text-decoration: underline;
+}
+
+/* line 131, ../sass/_global.scss */
+.banner {
+  width: 100%;
+  height: 200px;
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+/* line 139, ../sass/_global.scss */
+.banner .banner-filter {
+  width: 100%;
+  height: 100%;
+  background: url("../assets/slideshow-filter.png") repeat;
+}
+
+/* line 145, ../sass/_global.scss */
+.promo-image {
+  width: 100%;
+}
+
+/* line 149, ../sass/_global.scss */
+.breadcrumbs {
+  background: #e6e7e8;
+  padding-top: 2em;
+  font-size: .8em;
+  padding-bottom: 6em;
+  font-family: "Open Sans", sans-serif;
+}
+/* line 156, ../sass/_global.scss */
+.breadcrumbs ul li {
+  list-style: none;
+  display: inline-block;
+  margin: 0 .25em;
+}
+/* line 162, ../sass/_global.scss */
+.breadcrumbs a {
+  text-decoration: none;
+}
+
+/* line 165, ../sass/_global.scss */
+.page-title {
+  width: 60%;
+  margin-left: -25%;
+  background: #fff;
+  padding: 1em 0 0 35%;
+  margin-top: -1.5em;
+  margin-bottom: 0 !important;
+}
+
+/* line 174, ../sass/_global.scss */
+.page-section {
+  background: #fff;
+  padding: 2em 0;
+  border-bottom: 4px solid #cc3333;
+}
+/* line 179, ../sass/_global.scss */
+.page-section .wrapper {
+  padding-left: 6em;
+}
+/* line 183, ../sass/_global.scss */
+.page-section p, .page-section ul {
+  width: 60%;
+}
+/* line 187, ../sass/_global.scss */
+.page-section.bg-gray {
+  background: #e6e7e8;
+}
+/* line 190, ../sass/_global.scss */
+.page-section.full-width p, .page-section.full-width ul {
+  width: 90%;
+}
+
+/* line 197, ../sass/_global.scss */
+.profile {
+  *zoom: 1;
+  padding-bottom: 2em;
+}
+/* line 38, ../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
+.profile:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* line 202, ../sass/_global.scss */
+.profile-card {
+  background: #999;
+  color: #153f60;
+  width: 47%;
+  margin-right: 3%;
+}
+/* line 209, ../sass/_global.scss */
+.profile-card img {
+  float: left;
+  width: 50%;
+}
+/* line 214, ../sass/_global.scss */
+.profile-card dl {
+  text-align: center;
+  padding-top: 2em;
+}
+/* line 219, ../sass/_global.scss */
+.profile-card .position {
+  text-transform: uppercase;
+  font-weight: bold;
+}
+/* line 224, ../sass/_global.scss */
+.profile-card .name {
+  border-bottom: 1px dashed #153f60;
+  display: inline-block;
+  padding-bottom: .5em;
+  margin-bottom: .5em;
+}
+
+/* line 233, ../sass/_global.scss */
+.profile-text {
+  padding-left: 50%;
+  width: 50%;
+}
+
+/* line 238, ../sass/_global.scss */
+.profile-stack {
+  float: left;
+  color: #153f60;
+  width: 22%;
+  margin-right: 3%;
+  margin-bottom: 3%;
+}
+/* line 245, ../sass/_global.scss */
+.profile-stack img {
+  width: 100%;
+}
+/* line 249, ../sass/_global.scss */
+.profile-stack dl {
+  text-align: center;
+}
+/* line 253, ../sass/_global.scss */
+.profile-stack .position {
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-top: 1em;
+}
+/* line 259, ../sass/_global.scss */
+.profile-stack .name {
+  border-bottom: 1px dashed #153f60;
+  display: inline-block;
+  padding-bottom: .5em;
+  margin-bottom: .5em;
+}
+
+@media screen and (max-width: 1250px) {
+  /* line 269, ../sass/_global.scss */
+  .sub-nav {
+    width: 100%;
+    position: static;
+  }
+  /* line 273, ../sass/_global.scss */
+  .sub-nav ul li {
+    display: inline-block;
+    width: 15%;
+  }
+  /* line 278, ../sass/_global.scss */
+  .sub-nav .button {
+    display: inline-block;
+    width: 25%;
+  }
+}
 /* line 4, ../sass/_fonts.scss */
 h2 {
   font-family: "Raleway";
@@ -186,13 +403,13 @@ h4 {
 }
 
 /* line 30, ../sass/_fonts.scss */
-p, dl {
+p, dl, em, span {
   line-height: 1.4em;
   font-family: "Open Sans";
   font-weight: 300;
 }
 /* line 35, ../sass/_fonts.scss */
-p + p, p + ul, dl + p, dl + ul {
+p + p, p + ul, dl + p, dl + ul, em + p, em + ul, span + p, span + ul {
   margin-top: 1.4em;
 }
 
@@ -207,24 +424,28 @@ li {
 }
 
 /* line 49, ../sass/_fonts.scss */
+p {
+  max-width: 800px;
+}
+
+/* line 51, ../sass/_fonts.scss */
 a {
   color: #396eb6;
 }
 
-/* line 53, ../sass/_fonts.scss */
+/* line 55, ../sass/_fonts.scss */
 em {
   font-style: italic;
-  font-family: georgia, serif;
   font-weight: 100;
 }
 
-/* line 59, ../sass/_fonts.scss */
+/* line 60, ../sass/_fonts.scss */
 strong {
   font-weight: bold;
   font-size: .9em;
 }
 
-/* line 64, ../sass/_fonts.scss */
+/* line 65, ../sass/_fonts.scss */
 .content-title, .page-title {
   font-family: "Raleway";
   text-transform: uppercase;
@@ -694,244 +915,73 @@ footer .button {
 .page {
   background: #e6e7e8;
 }
-/* line 6, ../sass/_page.scss */
-.page .article-list article {
+
+/* line 4, ../sass/_post.scss */
+.post .featured-image {
+  width: 25%;
+  float: left;
+  margin-right: 2em;
+  margin-bottom: 1em;
+}
+/* line 12, ../sass/_post.scss */
+.post .post-meta {
+  margin-bottom: 1em;
+  font-size: .8em;
+  font-style: italic;
+}
+/* line 18, ../sass/_post.scss */
+.post p {
+  max-width: 800px;
+}
+
+/* line 3, ../sass/_archive.scss */
+.archive article, .blog article {
   border-bottom: 1px dashed #aaa;
   padding-bottom: 2em;
   margin-bottom: 2em;
 }
-/* line 11, ../sass/_page.scss */
-.page .article-list article:last-child {
+/* line 8, ../sass/_archive.scss */
+.archive article:last-child, .blog article:last-child {
   border: none;
   padding-bottom: 0;
 }
-/* line 16, ../sass/_page.scss */
-.page .article-list article .article-info {
+/* line 13, ../sass/_archive.scss */
+.archive article .featured-image, .blog article .featured-image {
+  width: 25%;
+  float: left;
+  margin-right: 2em;
   margin-bottom: 1em;
 }
-/* line 19, ../sass/_page.scss */
-.page .article-list article .article-info .article-title {
+/* line 20, ../sass/_archive.scss */
+.archive article .article-info, .blog article .article-info {
+  margin-bottom: 1em;
+}
+/* line 23, ../sass/_archive.scss */
+.archive article .article-info .article-title, .blog article .article-info .article-title {
   margin: 0;
 }
-/* line 22, ../sass/_page.scss */
-.page .article-list article .article-info .article-title a {
+/* line 26, ../sass/_archive.scss */
+.archive article .article-info .article-title a, .blog article .article-info .article-title a {
   text-decoration: none;
 }
-/* line 25, ../sass/_page.scss */
-.page .article-list article .article-info .article-title a:hover {
+/* line 29, ../sass/_archive.scss */
+.archive article .article-info .article-title a:hover, .blog article .article-info .article-title a:hover {
   text-decoration: underline;
 }
-/* line 33, ../sass/_page.scss */
-.page .article-list article .article-info .post-categories li {
+/* line 37, ../sass/_archive.scss */
+.archive article .article-info .post-categories li, .blog article .article-info .post-categories li {
   list-style: none;
   padding: 0;
   margin: 0;
   text-transform: none;
   font-size: .8em;
 }
-/* line 40, ../sass/_page.scss */
-.page .article-list article .article-info .post-categories li a {
+/* line 44, ../sass/_archive.scss */
+.archive article .article-info .post-categories li a, .blog article .article-info .post-categories li a {
   color: #333;
   text-decoration: none;
 }
-/* line 44, ../sass/_page.scss */
-.page .article-list article .article-info .post-categories li a:hover {
+/* line 48, ../sass/_archive.scss */
+.archive article .article-info .post-categories li a:hover, .blog article .article-info .post-categories li a:hover {
   text-decoration: underline;
-}
-/* line 55, ../sass/_page.scss */
-.page .post-meta dt + dd {
-  margin-bottom: 1em;
-}
-/* line 61, ../sass/_page.scss */
-.page .sub-nav {
-  background: #396eb6;
-  color: #fff;
-  width: 15%;
-  position: absolute;
-  right: 10%;
-}
-/* line 68, ../sass/_page.scss */
-.page .sub-nav .button {
-  width: 100%;
-  box-sizing: border-box;
-  margin-bottom: 1em;
-  text-align: center;
-}
-/* line 75, ../sass/_page.scss */
-.page .sub-nav .links {
-  padding: 1em;
-}
-/* line 79, ../sass/_page.scss */
-.page .sub-nav li {
-  list-style: none;
-  padding: 0;
-  margin: 0 0 .5em;
-}
-/* line 84, ../sass/_page.scss */
-.page .sub-nav li a {
-  color: #fff;
-  text-decoration: none;
-}
-/* line 88, ../sass/_page.scss */
-.page .sub-nav li a:hover {
-  text-decoration: underline;
-}
-/* line 94, ../sass/_page.scss */
-.page .banner {
-  width: 100%;
-  height: 200px;
-  position: relative;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-/* line 102, ../sass/_page.scss */
-.page .banner .banner-filter {
-  width: 100%;
-  height: 100%;
-  background: url("../assets/slideshow-filter.png") repeat;
-}
-/* line 108, ../sass/_page.scss */
-.page .promo-image {
-  width: 100%;
-}
-/* line 112, ../sass/_page.scss */
-.page .breadcrumbs {
-  background: #e6e7e8;
-  padding-top: 2em;
-  font-size: .8em;
-  padding-bottom: 6em;
-  font-family: "Open Sans", sans-serif;
-}
-/* line 119, ../sass/_page.scss */
-.page .breadcrumbs ul li {
-  list-style: none;
-  display: inline-block;
-  margin: 0 .25em;
-}
-/* line 125, ../sass/_page.scss */
-.page .breadcrumbs a {
-  text-decoration: none;
-}
-/* line 128, ../sass/_page.scss */
-.page .page-title {
-  width: 60%;
-  margin-left: -25%;
-  background: #fff;
-  padding: 1em 0 0 35%;
-  margin-top: -1.5em;
-  margin-bottom: 0 !important;
-}
-/* line 137, ../sass/_page.scss */
-.page .page-section {
-  background: #fff;
-  padding: 2em 0;
-  border-bottom: 4px solid #cc3333;
-}
-/* line 142, ../sass/_page.scss */
-.page .page-section .wrapper {
-  padding-left: 6em;
-}
-/* line 146, ../sass/_page.scss */
-.page .page-section p, .page .page-section ul {
-  width: 60%;
-}
-/* line 150, ../sass/_page.scss */
-.page .page-section.bg-gray {
-  background: #e6e7e8;
-}
-/* line 153, ../sass/_page.scss */
-.page .page-section.full-width p, .page .page-section.full-width ul {
-  width: 90%;
-}
-/* line 160, ../sass/_page.scss */
-.page .profile {
-  *zoom: 1;
-  padding-bottom: 2em;
-}
-/* line 38, ../../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
-.page .profile:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-/* line 165, ../sass/_page.scss */
-.page .profile-card {
-  background: #999;
-  color: #153f60;
-  width: 47%;
-  margin-right: 3%;
-}
-/* line 172, ../sass/_page.scss */
-.page .profile-card img {
-  float: left;
-  width: 50%;
-}
-/* line 177, ../sass/_page.scss */
-.page .profile-card dl {
-  text-align: center;
-  padding-top: 2em;
-}
-/* line 182, ../sass/_page.scss */
-.page .profile-card .position {
-  text-transform: uppercase;
-  font-weight: bold;
-}
-/* line 187, ../sass/_page.scss */
-.page .profile-card .name {
-  border-bottom: 1px dashed #153f60;
-  display: inline-block;
-  padding-bottom: .5em;
-  margin-bottom: .5em;
-}
-/* line 196, ../sass/_page.scss */
-.page .profile-text {
-  padding-left: 50%;
-  width: 50%;
-}
-/* line 201, ../sass/_page.scss */
-.page .profile-stack {
-  float: left;
-  color: #153f60;
-  width: 22%;
-  margin-right: 3%;
-  margin-bottom: 3%;
-}
-/* line 208, ../sass/_page.scss */
-.page .profile-stack img {
-  width: 100%;
-}
-/* line 212, ../sass/_page.scss */
-.page .profile-stack dl {
-  text-align: center;
-}
-/* line 216, ../sass/_page.scss */
-.page .profile-stack .position {
-  text-transform: uppercase;
-  font-weight: bold;
-  margin-top: 1em;
-}
-/* line 222, ../sass/_page.scss */
-.page .profile-stack .name {
-  border-bottom: 1px dashed #153f60;
-  display: inline-block;
-  padding-bottom: .5em;
-  margin-bottom: .5em;
-}
-@media screen and (max-width: 1250px) {
-  /* line 232, ../sass/_page.scss */
-  .page .sub-nav {
-    width: 100%;
-    position: static;
-  }
-  /* line 236, ../sass/_page.scss */
-  .page .sub-nav ul li {
-    display: inline-block;
-    width: 15%;
-  }
-  /* line 241, ../sass/_page.scss */
-  .page .sub-nav .button {
-    display: inline-block;
-    width: 25%;
-  }
 }
