--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -27,7 +27,7 @@ h4{
 	text-transform: uppercase;	
 }
 
-p, dl{
+p, dl, em, span{
 	line-height: 1.4em;
 	font-family: "Open Sans";
 	font-weight: 300;
@@ -45,6 +45,8 @@ li{
 	margin-left: 3em;
 	padding-left: .5em;
 }
+
+p{ max-width: 800px; }
  
 a{
 	color: $blue;
@@ -52,7 +54,6 @@ a{
 
 em{
 	font-style: italic;
-	font-family: georgia, serif;
 	font-weight: 100;
 }
 
