Adding new custom fields and logic including page headers, subnav customization.

--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -87,6 +87,8 @@ button, .button{
 		position: absolute;
 		right: 10%;
 
+		a{ color: #fff; }
+
 		.button{
 			width: 100%;
 			box-sizing: border-box;
