--- a/sass/_page.scss
+++ b/sass/_page.scss
@@ -4,25 +4,24 @@
 	.row{
 		@include pie-clearfix;
 		
-		.column{
-			float: left;
+		.columns{
+
+			&.half, &.quarters, &.three-quarter{
+
+				.column{
+					float: left;
+				}
+
+			}
+
+			&.half .first-column{ width: 48%; margin-right: 2%; }
+			&.quarters .column{ width: 23%; margin-right: 2%; }
+			&.three-quarter .first-column{ width: 73%; margin-right: 2%; }
+			
 		}
 	}
 
-	.columns2 .column{
-		width: 48%;
-		margin-right: 2%;
-	}
-
-	.columns3 .column{
-		width: 31%;
-		margin-right: 2%;
-	}
-
-	.columns4 .column{
-		width: 23%;
-		margin-right: 2%;
-	}
+	
 
 	@media screen and (max-width: 1400px){
 
