--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -929,38 +929,38 @@ footer .button {
   display: table;
   clear: both;
 }
-/* line 7, ../sass/_page.scss */
-.page .row .column {
+/* line 11, ../sass/_page.scss */
+.page .row .columns.half .column, .page .row .columns.quarters .column, .page .row .columns.three-quarter .column {
   float: left;
 }
-/* line 12, ../sass/_page.scss */
-.page .columns2 .column {
+/* line 17, ../sass/_page.scss */
+.page .row .columns.half .first-column {
   width: 48%;
   margin-right: 2%;
 }
-/* line 17, ../sass/_page.scss */
-.page .columns3 .column {
-  width: 31%;
-  margin-right: 2%;
-}
-/* line 22, ../sass/_page.scss */
-.page .columns4 .column {
+/* line 18, ../sass/_page.scss */
+.page .row .columns.quarters .column {
   width: 23%;
   margin-right: 2%;
 }
+/* line 19, ../sass/_page.scss */
+.page .row .columns.three-quarter .first-column {
+  width: 73%;
+  margin-right: 2%;
+}
 @media screen and (max-width: 1400px) {
-  /* line 29, ../sass/_page.scss */
+  /* line 28, ../sass/_page.scss */
   .page .columns4 .column {
     width: 48%;
     margin-right: 2%;
   }
-  /* line 33, ../sass/_page.scss */
+  /* line 32, ../sass/_page.scss */
   .page .columns4 .column:nth-child(2n-1) {
     clear: left;
   }
 }
 @media screen and (max-width: 800px) {
-  /* line 44, ../sass/_page.scss */
+  /* line 43, ../sass/_page.scss */
   .page .columns2 .column, .page .columns3 .column, .page .columns4 .column {
     width: 100%;
     margin-right: 0;
