--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -7,8 +7,7 @@
 		@include clearfix;
 	
 		.slideshow-texture{
-			background: url('../assets/slider-texture-bg.png') no-repeat center;
-			background-size: cover;
+			background: url('../assets/slideshow-filter.png');
 			@include clearfix;
 		}
 	
